[project]
name = "prompt_injection_detector"
version = "0.0.2"
description = "Validates whether an input prompt to an LLM is a prompt injection attempt."
authors = [
    {name = "Sainath", email = "sainatha@zamp.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "guardrails-ai>=0.4.0"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest>=7.4",
    "ruff"
] 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "tests"
]

[tool.pyright]
include = ["validator"]
